--- a/assets/CSS/styless copy.css
+++ b/assets/CSS/styless copy.css
@@ -1,9 +1,11 @@
 :root {
-    --primary-color: #06aa48;
-    --secundary-color: #156836;
-    --black-color: #111111;
+    --light-gray: #f5f5f5;      /*areas amplas, fundos*/
+    --medium-gray: #cccccc;         /*bordas, divisores e areas de destaque*/
+    --primary-color: #333333;       /*elementos principais e textos*/
+    --secundary-color: #e0e0e0;     /*secundarias e fundos de seçoes*/
     --black-color-oppacity: #111111;
-    --white-color: #fcfcfc;
+    --black-color: #000000; /*elementos de destaque*/
+    --gap: 3rem;
 }
 
 * {
@@ -24,6 +26,11 @@ body {
     line-height: 1.4;
 }
 
+p {
+    text-align: justify;
+    display: block;
+    width: 100%;  
+} 
 
 h1,
 h2,
@@ -34,10 +41,12 @@ h6,
 h7 {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
+    
 }
 
 h1 {
     font-size: 4rem;
+   
 }
 
 h2 {
@@ -53,7 +62,7 @@ h4 {
 }
 
 h5 {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 h6 {
@@ -64,30 +73,26 @@ h7 {
     font-size: 1rem;
 }
 
-p {
-    text-align: justify;
-    display: block;
-    width: 100%;
-    line-height: 4rem;
+h1 a {
+    text-decoration: none;
+    color:inherit;
 }
-
-.green-background {
-    background-color: var(--primary-color);
-    color: var(--white-color);
-}
-
-.main-background {
-    background-color: var(--white-color);
-    color: var(--black-color)
-}
-
-.main-content {
-    max-width: 150rem;
-    margin: 0 auto;
-}
-
 section {
-    min-height: 100vh;
+    background-color: var(--light-gray);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+body .full-width {
+    width: 100%;
+    flex: 1 100%
+}
+
+.gray-background {
+    background-color: var(--primary-color);
+    color: var(--secundary-color);
 }
 
 .menu {
@@ -100,6 +105,15 @@ section {
     z-index: 1;
     overflow-y: hidden;
 }
+.menu-content {
+    max-width: 120rem;
+    margin: 0 auto;   
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+ padding: 1.5rem 4rem;
+}
+
 
 .menu-toggle {
     cursor: pointer;
@@ -154,11 +168,11 @@ section {
     pointer-events: auto;
   }
 
-.buscar {
-    background-color: var(--secundary-color);
+.campo-buscar {
+    background-color: var(--black-color-oppacity);
     /* Verde padrão do Material Design */
     border: none;
-    color: var(--white-color);
+    color: var(--light-gray);
     padding: 10px 20px;
     text-align: left;
     text-decoration: none;
@@ -169,32 +183,38 @@ section {
     outline: none;
 }
 
-.buscar:focus {
-    box-shadow: 2px 2px 30px 1px var(--white-color);
+.campo-buscar:focus {
+    box-shadow: 2px 2px 15px 1px var(--medium-gray);
 }
 
-input ::placeholder {
-    color: #e70c0c;
+.main-background {
+    background-color: var(--secundary-color);
+    color: var(--black-color)    
 }
 
-.menu-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+.main-content {
+    max-width: 120rem;
+    margin: 0 auto;
+    padding: 12rem var(--gap);  
+    height: 100vh; 
 }
 
-.intro-content {
+.club-content {
     position: relative;
     display: grid;
     grid-template-columns: 1.5fr 1fr;
+    justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    border-radius: 2rem;
+    padding: 1.8rem;
+    box-shadow: 1px 1px 8px 0.3px var(--primary-color);
+    gap: var(--gap);
+    
+
 }
 
-.intro-text-content,
-.intro-img {
+.club-text-content,
+.club-img {
     display: flex;
     flex-flow: wrap;
     flex-direction: column;
@@ -204,51 +224,128 @@ input ::placeholder {
     text-align: center;
 }
 
-.intro-img span {
+.club-img span {
     padding-bottom: 5rem;
-    font-size: 4rem;
+    font-size: 4rem;   
     
 }
 
-.intro-text-content h2 {
-    margin-bottom: 5rem;
+.club-text-content h2 {    
     letter-spacing: 0.2rem;
-    line-height: 1.3;
+    padding: 3rem;
 }
 
-.intro-text-content ul {
+.club-text-content ul,
+.intro-content ul {
     list-style-position: inside;
     text-align: left;
     padding-left: 0;
     width: 100%;
     align-items: flex-start;
     padding-left: 5rem;
+    gap: var(--gap);
 }
 
-.intro-text-content li {
-    text-align: left;
-}
-
-
-.intro-img img {
+.club-img img {
     max-width: 30rem;
     min-height: auto;
-    transform: rotate(22deg);
 }
 
 footer {   
     font-size: 1.6rem;
     background-color: var(--black-color);
-    color: var(--white-color);
+    color: var(--light-gray);
+    position: absolute;
+    width: 100%;
+
 }
 
 footer a {
-    color: #525553;
+    color: var(--light-gray);
 }
 
 footer p {
     margin: 0;
     padding: 3rem;
     text-align: center;
+
+}
+
+@media (max-width: 1000px) {
+    h1 {
+        font-size: 2rem;
+        letter-spacing: 0.2rem;
+    }
+
+
+.menu-content {
+    max-width: 63rem;
+}
+
+.campo-buscar {
+    max-width: 15rem;
+    padding: 0.8rem;
+    text-align: left;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+/* Verde padrão do Material Design */
+.club-text-content h2{
+    font-size: 3rem;
+}
+
+.club-text-content{
+    font-size: 1.5rem;
+}
+}
+@media (max-width: 600px) {
+    h1 {
+        font-size: 1.2rem;
+        letter-spacing: 0.1rem;
+    }
+
+.menu-content {
+    width: 90%;
+    max-width: 50vh;   
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+}
+
+.campo-buscar {
+    max-width: 15rem;
+    padding: 0.8rem;
+    text-align: left;
+    text-decoration: none;
+    font-size: 1rem;
+}
+
+.club-content {
+    grid-template-columns: 1fr;  
+}
+
+/* Verde padrão do Material Design */
+.club-text-content h2{
+    font-size: 2rem;
+}
+
+.club-text-content{
+    font-size: 1rem;
+}
+
+.club-text-content img{
+    font-size: 1rem;
+}
+
+.club-img span {
+    padding-bottom: 0.5rem;
+    font-size: 1.5rem;      
+}
+
+.club-img img {
+    max-width: 10rem;
+    min-height: auto;
+}
 
 }
