--- a/assets/CSS/styless copy.css
+++ b/assets/CSS/styless copy.css
@@ -1,10 +1,15 @@
 :root {
-    --light-gray: #f5f5f5;      /*areas amplas, fundos*/
-    --medium-gray: #cccccc;         /*bordas, divisores e areas de destaque*/
-    --primary-color: #333333;       /*elementos principais e textos*/
-    --secundary-color: #e0e0e0;     /*secundarias e fundos de seçoes*/
+    --light-gray: #f5f5f5;
+    /*areas amplas, fundos*/
+    --medium-gray: #cccccc;
+    /*bordas, divisores e areas de destaque*/
+    --primary-color: #333333;
+    /*elementos principais e textos*/
+    --secundary-color: #e0e0e0;
+    /*secundarias e fundos de seçoes*/
     --black-color-oppacity: #111111;
-    --black-color: #000000; /*elementos de destaque*/
+    --black-color: #000000;
+    /*elementos de destaque*/
     --gap: 3rem;
 }
 
@@ -29,8 +34,8 @@ body {
 p {
     text-align: justify;
     display: block;
-    width: 100%;  
-} 
+    width: 100%;
+}
 
 h1,
 h2,
@@ -41,12 +46,12 @@ h6,
 h7 {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
-    
+
 }
 
 h1 {
     font-size: 4rem;
-   
+
 }
 
 h2 {
@@ -75,8 +80,9 @@ h7 {
 
 h1 a {
     text-decoration: none;
-    color:inherit;
+    color: inherit;
 }
+
 section {
     background-color: var(--light-gray);
     display: flex;
@@ -105,13 +111,14 @@ body .full-width {
     z-index: 1;
     overflow-y: hidden;
 }
+
 .menu-content {
     max-width: 120rem;
-    margin: 0 auto;   
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
- padding: 1.5rem 4rem;
+    padding: 1.5rem 4rem;
 }
 
 
@@ -123,7 +130,7 @@ body .full-width {
     position: fixed;
     top: 0;
     left: -100%;
-    width: 20%;
+    width: 35%;
     height: 100%;
     background-color: #f0f0f0;
     transition: all 0.3s ease;
@@ -132,41 +139,47 @@ body .full-width {
 
 .nav-menu.active {
     left: 0;
-  }
+}
 
-  .nav-menu ul {
+.nav-menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
-  }
-  
-  .nav-menu li {
+}
+
+.nav-menu li {
     padding: 1rem;
-  }
-  
-  .nav-menu a, h5 {
+}
+
+.nav-menu a,
+h5 {
     text-decoration: none;
     color: var(--black-color);
-    padding: 1.5rem;
-  }
+    padding: 1rem;
+    font-size: 3rem;
+}
 
-  .overlay {
+
+
+.overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Preto com 50% de opacidade */
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Preto com 50% de opacidade */
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
     pointer-events: none;
-    z-index: 1; /* Garante que a overlay fique atrás da navbar */
-  }
+    z-index: 1;
+    /* Garante que a overlay fique atrás da navbar */
+}
 
-  .show-overlay {
+.show-overlay {
     opacity: 1;
     pointer-events: auto;
-  }
+}
 
 .campo-buscar {
     background-color: var(--black-color-oppacity);
@@ -189,14 +202,14 @@ body .full-width {
 
 .main-background {
     background-color: var(--secundary-color);
-    color: var(--black-color)    
+    color: var(--black-color)
 }
 
 .main-content {
     max-width: 120rem;
     margin: 0 auto;
-    padding: 12rem var(--gap);  
-    height: 100vh; 
+    padding: 12rem var(--gap);
+    height: 100vh;
 }
 
 .club-content {
@@ -209,7 +222,7 @@ body .full-width {
     padding: 1.8rem;
     box-shadow: 1px 1px 8px 0.3px var(--primary-color);
     gap: var(--gap);
-    
+
 
 }
 
@@ -220,17 +233,17 @@ body .full-width {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position:relative; 
+    position: relative;
     text-align: center;
 }
 
 .club-img span {
     padding-bottom: 5rem;
-    font-size: 4rem;   
-    
+    font-size: 4rem;
+
 }
 
-.club-text-content h2 {    
+.club-text-content h2 {
     letter-spacing: 0.2rem;
     padding: 3rem;
 }
@@ -251,7 +264,7 @@ body .full-width {
     min-height: auto;
 }
 
-footer {   
+footer {
     font-size: 1.6rem;
     background-color: var(--black-color);
     color: var(--light-gray);
@@ -277,75 +290,102 @@ footer p {
         letter-spacing: 0.2rem;
     }
 
+    .nav-menu {
+        width: 70%;
+    }
 
-.menu-content {
-    max-width: 63rem;
+    .nav-menu li {
+        padding: 1rem;
+      }
+      
+      .nav-menu a, h5 {
+        font-size: 3rem;
+      }
+
+    .menu-content {
+        max-width: 63rem;
+    }
+
+    .campo-buscar {
+        max-width: 15rem;
+        padding: 0.8rem;
+        text-align: left;
+        text-decoration: none;
+        font-size: 1rem;
+    }
+
+    /* Verde padrão do Material Design */
+    .club-text-content h2 {
+        font-size: 3rem;
+    }
+
+    .club-text-content {
+        font-size: 1.5rem;
+    }
 }
 
-.campo-buscar {
-    max-width: 15rem;
-    padding: 0.8rem;
-    text-align: left;
-    text-decoration: none;
-    font-size: 1rem;
-}
-
-/* Verde padrão do Material Design */
-.club-text-content h2{
-    font-size: 3rem;
-}
-
-.club-text-content{
-    font-size: 1.5rem;
-}
-}
 @media (max-width: 600px) {
     h1 {
         font-size: 1.2rem;
         letter-spacing: 0.1rem;
     }
 
-.menu-content {
-    width: 90%;
-    max-width: 50vh;   
-    flex-direction: column; 
-    justify-content: center;
-    align-items: center;
-}
+    .nav-menu {
+        width: 70%;
+    }
 
-.campo-buscar {
-    max-width: 15rem;
-    padding: 0.8rem;
-    text-align: left;
-    text-decoration: none;
-    font-size: 1rem;
-}
+    .nav-menu li {
+        padding: 0.5rem;
+    }
 
-.club-content {
-    grid-template-columns: 1fr;  
-}
+    .nav-menu a,
+    h5 {
+        font-size: 2rem;
+        padding: 0.5rem;
+    }
 
-/* Verde padrão do Material Design */
-.club-text-content h2{
-    font-size: 2rem;
-}
+    .menu-content {
+        width: 90%;
+        max-width: 50vh;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-.club-text-content{
-    font-size: 1rem;
-}
+    .campo-buscar {
+        max-width: 15rem;
+        padding: 0.8rem;
+        text-align: left;
+        text-decoration: none;
+        font-size: 1rem;
+    }
 
-.club-text-content img{
-    font-size: 1rem;
-}
+    .club-content {
+        grid-template-columns: 1fr;
+    }
 
-.club-img span {
-    padding-bottom: 0.5rem;
-    font-size: 1.5rem;      
-}
+    /* Verde padrão do Material Design */
+    .club-text-content h2 {
+        font-size: 2rem;
+    }
 
-.club-img img {
-    max-width: 10rem;
-    min-height: auto;
-}
+    .club-text-content {
+        font-size: 1rem;
+    }
 
+    .club-text-content img {
+        font-size: 1rem;
+    }
+
+    .club-img span {
+        padding-bottom: 0.5rem;
+        font-size: 1.5rem;
+    }
+
+    .club-img img {
+        max-width: 10rem;
+        min-height: auto;
+
+
+    }
 }
